--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Scripler, Welcome</title>
-		<link rel="icon" type="image/ico" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/shared/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/pages/frontpage.css" />
 	</head>
 	<body>
+
+		<div id="background"></div>
 
 		<nav class="topmenu">
 	    	<ul>
@@ -59,6 +60,7 @@
 		<!--[if gte IE 9]><!---->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 		<!--<![endif]-->
+		<script src="http://code.jquery.com/color/jquery.color-2.1.0.js"></script>
 		<script src="js/shared/jquery.scrollpoint.js"></script>
 		<script src="js/pages/frontpage.jquery.js"></script>
 
