Added error pages and images, and one redirect for no support of javascript

--- a/public/create.html
+++ b/public/create.html
@@ -3,7 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=error-javascript.html"> 
+    </noscript>
+
 		<title>Scripler, Create</title>
 		<link rel="icon" type="image/ico" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/shared/default.css" />
