--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=error-javascript.html"> 
+    </noscript>
+
 		<title>Scripler, Welcome</title>
 		<link rel="stylesheet" type="text/css" href="css/shared/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/pages/frontpage.css" />
