changes to controllers

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -36,6 +36,7 @@
   </div>
 
   <div class="editor">
+<!--    <textarea data-ng-model="ckContent" data-ck-editor></textarea>-->
     <textarea ck-editor="" ng-model="entrybody" class="form-control" id="bodyeditor" value="{{entrybody}}">
       {{entrybody}}
     </textarea>
