uncomment google map api

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/pages/frontpage.css" />
 	<link rel="stylesheet" type="text/css" href="css/modules/navigation.css" />
 
-	<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk6FHf_Xec1ykYuZoWjcicCwP-heTCL-w&sensor=true"></script>-->
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk6FHf_Xec1ykYuZoWjcicCwP-heTCL-w&sensor=true"></script>
 </head>
 <body>
 
