Aligned wording with the other texts.

--- a/public/index.html
+++ b/public/index.html
@@ -270,7 +270,7 @@
 					<a href="mailto:david@scripler.com">david@scripler.com</a><br /><br />
 
 					<strong>Morten Garbøl Franck</strong>, Backend developer<br />
-					Things I’m addicted to:<br />
+					Is addicted to:<br />
 					<ul><li>Lists</li></ul>
 					<a href="mailto:morten@scripler.com">morten@scripler.com</a><br /><br />
 
