new features layout and text

--- a/public/index.html
+++ b/public/index.html
@@ -75,78 +75,56 @@
 	</section>
 
 	<section id="features" class="clearfix">
-	  <article>
+	  <article class="overflow">
 		<h1>Features</h1>
 
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/free.png" width="100" height="100" />
+		<div class="row">
+			<div class="hexagon-icon">
+				<img src="images/features/free.png" width="140" height="140" />
 			</div>
-			<div class="hexagon-title">It’s free</div>
-	<!--   		<div class="hexagon-text">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</div>-->
+			<div class="hexagon-info">
+				<div class="hexagon-title">It’s free</div>
+				<div class="hexagon-text">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</div>
+			</div>
+			<div class="hexagon-icon right">
+				<img src="images/features/many.png" width="140" height="140" />
+			</div>
+			<div class="hexagon-info right">
+				<div class="hexagon-title">Make as many books you like</div>
+		    	<div class="hexagon-text">No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</div>
+		    </div>
 		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/many.png" width="100" height="100" />
+		<div class="row">
+			<div class="hexagon-icon">
+				<img src="images/features/ebook.png" width="140" height="140" />
 			</div>
-			<div class="hexagon-title">Make as many books you like</div>
-	<!--	    <div class="hexagon-text">- No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</div>-->
+			<div class="hexagon-info">
+				<div class="hexagon-title">Fully functional ebooks</div>
+		    	<div class="hexagon-text">Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</div>
+		    </div>
+		    <div class="hexagon-icon right">
+				<img src="images/features/togd.png" width="140" height="140" />
+			</div>
+			<div class="hexagon-info right">
+				<div class="hexagon-title">Great typography and design</div>
+	   			<div class="hexagon-text">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. You can make any type of book with high quality and stringent design. Easily insert images and figures.</div>
+	   		</div>
 		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/interface.png" width="100" height="100" />
+		<div class="row">
+			<div class="hexagon-icon">
+				<img src="images/features/import.png" width="140" height="140" />
 			</div>
-			<div class="hexagon-title">Groundbreaking user interface</div>
-	<!--	    <div class="hexagon-text">Write in Scriplers distraction-free interface. Everything you need is visible with a single click. Easily manage complex projects with many documents and switch instantly between them, never losing focus on the text editor.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/togd.png" width="100" height="100" />
+			<div class="hexagon-info">
+				<div class="hexagon-title">Import</div>
+		    	<div class="hexagon-text">Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</div>
+		    </div>
+		    <div class="hexagon-icon right">
+				<img src="images/features/premium.png" width="140" height="140" />
 			</div>
-			<div class="hexagon-title">Great typography and design</div>
-	<!--	    <div class="hexagon-text">- Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. You can make any type of book with high quality and stringent design. Easily insert images and figures.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/ebook.png" width="100" height="100" />
+			<div class="hexagon-info right">
+				<div class="hexagon-title">Premium subscription for heavy users and professionals</div>
+		    	<div class="hexagon-text">As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</div>
 			</div>
-			<div class="hexagon-title">Fully functional ebooks</div>
-	<!--	    <div class="hexagon-text">- Easily insert a cover, table of content, title-page, text-boxes, lists and colophon. All elements are designed for the book-template you currently use. Easily add all relevant metadata to your book, including description and keywords.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/import.png" width="100" height="100" />
-			</div>
-			<div class="hexagon-title">Import</div>
-	<!--	    <div class="hexagon-text">Easily import your content from Word. Just copy and paste directly in the editor, and you’re ready to get to work.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/web.png" width="100" height="100" />
-			</div>
-			<div class="hexagon-title">Open standards and web technology</div>
-	<!--	    <div class="hexagon-text">- Scripler makes ebooks in EPUB format. EPUB is the definitive international and open standard for ebooks. While you will never see any code in Scripler, it is based on web standards such as HTML and CSS.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/innovate.png" width="100" height="100" />
-			</div>
-			<div class="hexagon-title">Digital avant-garde</div>
-	<!--	    <div class="hexagon-text">- Experiment with new genres and literary forms. Make ultra-hyperlinked asynchronous neo-literature, make old genres new again or something entirely different. It´s easy to innovate with Scripler.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/world.png" width="100" height="100" />
-			</div>
-			<div class="hexagon-title">Work from anywhere</div>
-	<!--	    <div class="hexagon-text">- Scripler saves your work in the cloud. Each account has free storage enough for several books. You can work from everywhere, and never worry about losing your work.</div>-->
-		</div>
-		<div class="hexagon">
-			<div class="hexagon-content">
-				<img src="images/features/premium.png" width="100" height="100" />
-			</div>
-			<div class="hexagon-title">Premium subscription for heavy users and professionals</div>
-	<!--	    <div class="hexagon-text">- As a premium subscriber you’ll have a wider range of professionaly designed book-templates to choose from, more space for more books, as well as the ability to create and control your own custom book-templates.</div>-->
 		</div>
 	  </article>
 	</section>
@@ -190,7 +168,7 @@
 				But the whole process hasn't been redone and rethought completely yet (at least for a great deal of publishers)
 				</div>
 				<div class="column">
-				- something which is sorely needed and will mean great savings and freeing of resources to make better content - if done right.<br /><br />For example, in many places the text is prepared fully in two places. First made ready as a washed and edited word-manuscript and then again by the designer in InDesign or similar (and even a third time if published digitally). This is insane. There should not be reason to actually produce the text two (or three) times - this is a left-over  from long dead technological paradigmes, representing handwriting (/typewriting) and typesetting.
+				- something which is sorely needed and will mean great savings and freeing of resources to make better icon - if done right.<br /><br />For example, in many places the text is prepared fully in two places. First made ready as a washed and edited word-manuscript and then again by the designer in InDesign or similar (and even a third time if published digitally). This is insane. There should not be reason to actually produce the text two (or three) times - this is a left-over  from long dead technological paradigmes, representing handwriting (/typewriting) and typesetting.
 				</div>
 				<div class="column">
 				Even so it is done extensively and it runs up the cost of book-production immensely - using our most costly resource - skilled human workforce.<br /><br />Of course everything isn't just cake - it is difficult, costly and easy to make mistakes and fail horribly - and even though iBooks Author has some interesting ideas - it seems to fail to serve anyone but Apple itself - I don't think it will stand in the long run. But things need to change if the publishing business is to survive.
