--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
 			</div>
 			<div class="hexagon-info right">
 				<div class="hexagon-title">Great typography and design</div>
-	   			<div class="hexagon-text">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. You can make any type of book with high quality and stringent design. Easily insert images and figures.</div>
+	   			<div class="hexagon-text">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</div>
 	   		</div>
 		</div>
 		<div class="row">
