--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="try-wrapper">
-				<button type="button" class="button try-button">Try creating your first book!</button>
+				<a href="create/"><button type="button" class="button try-button">Try creating your first book!</button></a>
 			</div>
 
 	  </article>
