login button width

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 					<div class="login-group">
 						<input type="email" value="" name="login-email" class="required email" id="login-email" placeholder="Email Address">
 						<input type="password" value="" name="login-password" class="required password" id="login-password" placeholder="Password">
-						<input name="Login" type="submit" value="Login" class="button">
+						<input name="Login" type="submit" value="Login" class="button login">
 					</div>
 				</form>
 				<div class="socialicons clearfix">
