fix animation issue when clicking menu multiple times issue #40

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 	</nav>
 
 	<section id="login" class="clearfix">
-		<article>
+		<article class="login-article">
 			<div class="login-wrap">
 				<form id="login-form">
 					<div class="login-group">
