changed email format, added gabriel, converted spaces to tabs

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 	</section>
 
 	<section id="scripler" class="clearfix">
-	  <article>
+		<article>
 			<div class="create_logo"><img src="images/logo.png" /></div>
 
 			<h2 class="create_subtitle">
@@ -70,159 +70,148 @@
 				<a href="create/"><button type="button" class="button try-button">Go!</button></a>
 			</div>
 
-	  </article>
+		</article>
 	</section>
 
 	<section id="features" class="clearfix">
-	  <article class="overflow">
-		<h1>Features</h1>
+		<article class="overflow">
+			<h1>Features</h1>
 
-		<div class="row">
-			<div class="hexagon-icon">
-				<img src="images/features/free.png" width="140" height="140" />
-			</div>
-			<div class="hexagon-info">
-				<div class="hexagon-title">It’s free</div>
-				<div class="hexagon-text">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</div>
-			</div>
-			<div class="hexagon-icon right">
-				<img src="images/features/many.png" width="140" height="140" />
-			</div>
-			<div class="hexagon-info right">
-				<div class="hexagon-title">Make as many books you like</div>
-		    	<div class="hexagon-text">No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</div>
-		    </div>
-		</div>
-		<div class="row">
-			<div class="hexagon-icon">
-				<img src="images/features/ebook.png" width="140" height="140" />
-			</div>
-			<div class="hexagon-info">
-				<div class="hexagon-title">Fully functional ebooks</div>
-		    	<div class="hexagon-text">Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</div>
-		    </div>
-		    <div class="hexagon-icon right">
-				<img src="images/features/togd.png" width="140" height="140" />
-			</div>
-			<div class="hexagon-info right">
-				<div class="hexagon-title">Great typography and design</div>
-	   			<div class="hexagon-text">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</div>
-	   		</div>
-		</div>
-		<div class="row">
-			<div class="hexagon-icon">
-				<img src="images/features/import.png" width="140" height="140" />
-			</div>
-			<div class="hexagon-info">
-				<div class="hexagon-title">Import</div>
-		    	<div class="hexagon-text">Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</div>
-		    </div>
-		    <div class="hexagon-icon right">
-				<img src="images/features/premium.png" width="140" height="140" />
-			</div>
-			<div class="hexagon-info right">
-				<div class="hexagon-title">Premium subscription for heavy users and professionals</div>
-		    	<div class="hexagon-text">As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</div>
-			</div>
-		</div>
-	  </article>
-	</section>
-
-	<!--<section id="pricing" data-speed="100" data-type="background">
-	  <article>
-	  </article>
-	</section>-->
-
-	<!--<section id="learn" data-speed="100" data-type="background">
-	  <article>
-	  </article>
-	</section>-->
-
-	<section id="about" class="clearfix">
-		<div class="prev hidden"><img src="images/arrow_left.png" /></div>
-		<article>
-			<div class="inner">
-				<h1>About</h1>
-
-				<div class="column">
-					<h2>Do it yourself</h2>
-					It’s not easy to change the fundamental structures of a system, that has run the same way for centuries. But that’s the mission Scripler set out to accomplish two years ago. To make publishing possible for everyone. If you want to make an ebook you can. But if you want to have it look and act like it was designed by professionals and you want to make it fast, things start to get complicated. The technologies necessary to DIY exist - but in the current wilderness of self-publishing it’s not accessible to everyone. Existing ebook tools are often extremely pricey and you still need to be familiar with html and css if you want your ebook to be great. That’s where Scripler is different: you’ll be able to create, professionally edit, design, share, and sell your own work - without having to code or shell out thousands of dollars in the process. In fact, it won’t cost you a thing.
+			<div class="row">
+				<div class="hexagon-icon">
+					<img src="images/features/free.png" width="140" height="140" />
 				</div>
-
-				<div class="column">
-					<h2>From idea to reality</h2>
-					All work on Scripler is done with zero pay and after we punch out at our regular jobs. We run solely on sugary bytes and fumes of the digital revolution. Scripler was conceived in the mind of project manager and founder David, who was tired of the exhaustingly rigid ways of old fashioned publishing houses. He asked himself the simple question: Why does it have to be so hard, when it should be so easy? That was two year ago, and since Scripler has grown from a one-man show to a full fledged team of 7 Scriplers. Working with a clear mission for the future: We want you to make great ebooks.<br /><br />
-					<a href="#" class="seeteam">See the team</a>
+				<div class="hexagon-info">
+					<div class="hexagon-title">It’s free</div>
+					<div class="hexagon-text">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</div>
 				</div>
-
-				<div class="column">
-					<h2>What’s next?</h2>
-					In just a few short years the world of ebooks and digital publishing has expanded exponentially and both writers and readers have accepted the paperless book. The digitalization of the written word is teeming with potential - most of which we believe has yet to be realized. With a free and functional publishing tool like Scripler we aim to make the whole process of writing, creating and collaborating more fluid. So instead of having to become a publishing professional, focus on what’s important: creating and sharing.<br /><br />
-					Scriplers vision is to make the ebook revolution accessible to anyone who has something to say. If you are one of them, subscribe to our newsletter and get early access when we launch.<br /><br />
-					<a href="#" class="to-top">Go to Signup</a><br />
+				<div class="hexagon-icon right">
+					<img src="images/features/many.png" width="140" height="140" />
+				</div>
+				<div class="hexagon-info right">
+					<div class="hexagon-title">Make as many books you like</div>
+					<div class="hexagon-text">No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="hexagon-icon">
+					<img src="images/features/ebook.png" width="140" height="140" />
+				</div>
+				<div class="hexagon-info">
+					<div class="hexagon-title">Fully functional ebooks</div>
+					<div class="hexagon-text">Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</div>
+				</div>
+				<div class="hexagon-icon right">
+					<img src="images/features/togd.png" width="140" height="140" />
+				</div>
+				<div class="hexagon-info right">
+					<div class="hexagon-title">Great typography and design</div>
+					<div class="hexagon-text">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="hexagon-icon">
+					<img src="images/features/import.png" width="140" height="140" />
+				</div>
+				<div class="hexagon-info">
+					<div class="hexagon-title">Import</div>
+					<div class="hexagon-text">Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</div>
+				</div>
+				<div class="hexagon-icon right">
+					<img src="images/features/premium.png" width="140" height="140" />
+				</div>
+				<div class="hexagon-info right">
+					<div class="hexagon-title">Premium subscription for heavy users and professionals</div>
+					<div class="hexagon-text">As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</div>
 				</div>
 			</div>
 		</article>
+	</section>
+
+	<!--<section id="pricing" data-speed="100" data-type="background">
+		<article>
+		</article>
+	</section>-->
+
+	<!--<section id="learn" data-speed="100" data-type="background">
+		<article>
+		</article>
+	</section>-->
+
+	<section id="about" class="clearfix">
 		<article>
 			<div class="inner">
 				<h1>About</h1>
-				<h2>Employees</h2>
+				<h2>Scriplers</h2>
+
 				<div class="half">
-					<strong>David Walther Birk</strong>, Project Lead<br />
-					Is actually an archaeologist!<br />
-					<a href="mailto:david@scripler.com">david@scripler.com</a><br /><br />
+					<span>
+						<a href="mailto:david@scripler.com" class="email-text">David Walther Birk</a>, Project Lead<br />
+						Is actually an archaeologist!
+					</span>
 
-					<strong>Morten Garbøl Franck</strong>, Backend developer<br />
-					Is addicted to:<br />
-					<ul><li>Lists</li></ul>
-					<a href="mailto:morten@scripler.com">morten@scripler.com</a><br /><br />
+					<span>
+						<a href="mailto:morten@scripler.com" class="email-text">Morten Garbøl Franck</a>, Backend developer<br />
+						Is addicted to:<br />
+						<ul><li>Lists</li></ul>
+					</span>
 
-					<strong>Sofie Marie Ottsen</strong>, Communications<br />
-					Plays the saxophone (really poorly)<br />
-					<a href="mailto:sofie@scripler.com">sofie@scripler.com</a><br /><br />
+					<span>
+						<a href="mailto:sofie@scripler.com" class="email-text">Sofie Marie Ottsen</a>, Communications<br />
+						Plays the saxophone (really poorly)
+					</span>
 
-					<strong>Ole Sandbæk Jørgensen</strong>, Frontend developer<br />
-					Fanatic movie watcher. As long as I got my specs on, aye.<br />
-					<a href="mailto:ole@scripler.com">ole@scripler.com</a>
+					<span>
+						<a href="mailto:ole@scripler.com" class="email-text">Ole Sandbæk Jørgensen</a>, Frontend developer<br />
+						Fanatic movie watcher. As long as I got my specs on, aye.
+					</span>
 				</div>
 				<div class="half">
-					<strong>Kaspar Sivertsen</strong>, Graphic designer<br />
-					Has no special characteristics what so ever<br />
-					<a href="mailto:kaspar@scripler.com">kaspar@scripler.com</a><br /><br />
+					<span>
+						<a href="mailto:kaspar@scripler.com" class="email-text">Kaspar Sivertsen, Graphic designer</a><br />
+						Has no special characteristics what so ever
+					</span>
 
-					<strong>Allan Mørk Christensen</strong>, Backend developer<br />
-					Solves the Rubik’s Cube (very slowly)<br />
-					<a href="mailto:allan@scripler.com">allan@scripler.com</a><br /><br />
+					<span>
+						<a href="mailto:allan@scripler.com" class="email-text">Allan Mørk Christensen</a>, Backend developer<br />
+						Solves the Rubik’s Cube (very slowly)
+					</span>
 
-					<strong>Kasper Møller</strong>, Communications<br />
-					Co-writes a blog about otters.<br />
-					<a href="mailto:kasper@scripler.com">kasper@scripler.com</a>
+					<span>
+						<a href="mailto:kasper@scripler.com" class="email-text">Kasper Møller</a>, Communications<br />
+						Co-writes a blog about otters.
+					</span>
+
+					<span>
+						<a href="mailto:gabriel@scripler.com" class="email-text">Gabrielius Gudynas</a>, Code Monkey<br />
+						Loves pushing code.
+					</span>
 				</div>
 			</div>
 		</article>
 	</section>
 
 	<section id="contact" class="clearfix">
-	  <div id="map-canvas"></div>
-	  <article>
-		<h1>Contact</h1>
-		<h2>Ask us anything (about Scripler)</h2>
-		<div>David Walther Birk<br />Project leader<br /><a href="mailto:david@scripler.com">david@scripler.com</a></div>
+		<div id="map-canvas"></div>
+			<article>
+				<h1>Contact</h1>
+				<h2>Ask us anything (about Scripler)</h2>
+				<div>David Walther Birk<br />Project leader<br /><a href="mailto:david@scripler.com">david@scripler.com</a></div>
 
-		<h2>Find us</h2>
-		<div>Scripler<br />Laplandsgade 4, 1st floor<br />2300 København S<br />Denmark</div>
+				<h2>Find us</h2>
+				<div>Scripler<br />Laplandsgade 4, 1st floor<br />2300 København S<br />Denmark</div>
 
-		<h2>Press and media</h2>
-		<div class="clearfix">
-			<div class="half">Kasper Møller<br /><a href="mailto:kasper@scripler.com">kasper@scripler.com</a></div>
-			<div class="half">Sofie Marie Ottsen<br /><a href="mailto:sofie@scripler.com">sofie@scripler.com</a></div>
-		</div>
+				<h2>Press and media</h2>
+				<div class="clearfix">
+					<div class="half">Kasper Møller<br /><a href="mailto:kasper@scripler.com">kasper@scripler.com</a></div>
+					<div class="half">Sofie Marie Ottsen<br /><a href="mailto:sofie@scripler.com">sofie@scripler.com</a></div>
+				</div>
 
-		<h2>Stay informed</h2>
-		<div>Sign up for the newsletter and be the first to know when Scripler is launched. The newsletter will give you a gourmet selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.<br /><br />
-		<a href="#" class="to-top">Go to Signup</a>
-		</div>
-	  </article>
+				<h2>Stay informed</h2>
+				<div>Sign up for the newsletter and be the first to know when Scripler is launched. The newsletter will give you a gourmet selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.<br /><br />
+				<a href="#" class="to-top">Go to Signup</a>
+				</div>
+			</article>
 	</section>
 
 	<!-- JS Code -->
