--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			<li class="navpoint menu-about" data="about"><a href="#about">About</li>
 			<li class="navpoint menu-contact" data="contact"><a href="#contact">Contact</a></li>
 			<li class="navpoint menu-login" data="login"><a href="#login">Login</a></li>
-
+			<li class="navpoint menu-blog" data="blog"><a href="http://blog.scripler.com/" class="blog-link">Blog</a></li>
 			<!--<li class="navbutton" id="showMenu"></li>-->
 		</ul>
 	</nav>
