--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
 
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" type="text/css" href="css/shared/default.css" />
-	<link rel="stylesheet" type="text/css" href="css/shared/fonts.css" />
-	<link rel="stylesheet" type="text/css" href="css/pages/frontpage.css" />
-	<link rel="stylesheet" type="text/css" href="css/modules/navigation.css" />
+	<link rel="stylesheet" type="text/css" href="publicdemo/css/shared/default.css" />
+	<link rel="stylesheet" type="text/css" href="publicdemo/css/shared/fonts.css" />
+	<link rel="stylesheet" type="text/css" href="publicdemo/css/pages/frontpage.css" />
+	<link rel="stylesheet" type="text/css" href="publicdemo/css/modules/navigation.css" />
 
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk6FHf_Xec1ykYuZoWjcicCwP-heTCL-w&sensor=true"></script>
 </head>
@@ -45,9 +45,9 @@
 					</div>
 				</form>
 				<div class="socialicons clearfix">
-					<div class="socialicon"><a href="http://localhost:8888/api/auth/facebook" target="_blank"><span class="icon-facebook"></span></a></div>
-					<div class="socialicon"><a href="http://localhost:8888/api/auth/google" target="_blank"><span class="icon-linkedin"></span></a></div>
-					<div class="socialicon"><a href="http://localhost:8888/api/auth/google" target="_blank"><span class="icon-google-plus"></span></a></div>
+					<div class="socialicon"><a href="api/auth/facebook" target="_blank"><span class="icon-facebook"></span></a></div>
+					<div class="socialicon"><a href="api/auth/google" target="_blank"><span class="icon-linkedin"></span></a></div>
+					<div class="socialicon"><a href="api/auth/google" target="_blank"><span class="icon-google-plus"></span></a></div>
 				</div>
 			 </div>
 		</article>
@@ -55,7 +55,7 @@
 
 	<section id="scripler" class="clearfix">
 		<article>
-			<div class="create_logo"><img src="images/logo.png" /></div>
+			<div class="create_logo"><img src="publicdemo/images/logo.png" /></div>
 
 			<h2 class="create_subtitle">
 				Make great ebooks
@@ -79,14 +79,14 @@
 
 			<div class="row">
 				<div class="hexagon-icon">
-					<img src="images/features/free.png" width="140" height="140" />
+					<img src="publicdemo/images/features/free.png" width="140" height="140" />
 				</div>
 				<div class="hexagon-info">
 					<div class="hexagon-title">It’s free</div>
 					<div class="hexagon-text">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</div>
 				</div>
 				<div class="hexagon-icon right">
-					<img src="images/features/many.png" width="140" height="140" />
+					<img src="publicdemo/images/features/many.png" width="140" height="140" />
 				</div>
 				<div class="hexagon-info right">
 					<div class="hexagon-title">Make as many books you like</div>
@@ -95,14 +95,14 @@
 			</div>
 			<div class="row">
 				<div class="hexagon-icon">
-					<img src="images/features/ebook.png" width="140" height="140" />
+					<img src="publicdemo/images/features/ebook.png" width="140" height="140" />
 				</div>
 				<div class="hexagon-info">
 					<div class="hexagon-title">Fully functional ebooks</div>
 					<div class="hexagon-text">Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</div>
 				</div>
 				<div class="hexagon-icon right">
-					<img src="images/features/togd.png" width="140" height="140" />
+					<img src="publicdemo/images/features/togd.png" width="140" height="140" />
 				</div>
 				<div class="hexagon-info right">
 					<div class="hexagon-title">Great typography and design</div>
@@ -111,14 +111,14 @@
 			</div>
 			<div class="row">
 				<div class="hexagon-icon">
-					<img src="images/features/import.png" width="140" height="140" />
+					<img src="publicdemo/images/features/import.png" width="140" height="140" />
 				</div>
 				<div class="hexagon-info">
 					<div class="hexagon-title">Import</div>
 					<div class="hexagon-text">Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</div>
 				</div>
 				<div class="hexagon-icon right">
-					<img src="images/features/premium.png" width="140" height="140" />
+					<img src="publicdemo/images/features/premium.png" width="140" height="140" />
 				</div>
 				<div class="hexagon-info right">
 					<div class="hexagon-title">Premium subscription for heavy users and professionals</div>
@@ -222,7 +222,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<!--<![endif]-->
 
-	<script src="js/frontpage.jquery.js"></script>
+	<script src="publicdemo/js/frontpage.jquery.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
