icon fixes for public demo

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
 	<section id="scripler" class="clearfix">
 		<article>
-				<div class="create_logo"><img src="images/logo.png" /></div>
+				<div class="create_logo"><img src="publicdemo/images/logo.png" /></div>
 
 				<h2 class="create_subtitle">
 					Make great ebooks
