hide login for public demo

--- a/public/index.html
+++ b/public/index.html
@@ -29,29 +29,10 @@
 			<li class="navpoint menu-about" data="about"><a href="#about">About</li>
 			<li class="navpoint menu-contact" data="contact"><a href="#contact">Contact</a></li>
 			<li class="navpoint menu-login" data="login"><a href="#login">Login</a></li>
-			<li class="navpoint menu-blog" data="blog"><a href="http://blog.scripler.com/" class="blog-link">Blog</a></li>
+			<!--<li class="navpoint menu-blog" data="blog"><a href="http://blog.scripler.com/" class="blog-link">Blog</a></li>-->
 			<!--<li class="navbutton" id="showMenu"></li>-->
 		</ul>
 	</nav>
-
-	<section id="login" class="clearfix">
-		<article class="login-article">
-			<div class="login-wrap">
-				<form id="login-form">
-					<div class="login-group">
-						<input type="email" value="" name="login-email" class="required email" id="login-email" placeholder="Email Address">
-						<input type="password" value="" name="login-password" class="required password" id="login-password" placeholder="Password">
-						<input name="Login" type="submit" value="Login" class="button login">
-					</div>
-				</form>
-				<div class="socialicons clearfix">
-					<div class="socialicon"><a href="api/auth/facebook" target="_blank"><span class="icon-facebook"></span></a></div>
-					<div class="socialicon"><a href="api/auth/google" target="_blank"><span class="icon-linkedin"></span></a></div>
-					<div class="socialicon"><a href="api/auth/google" target="_blank"><span class="icon-google-plus"></span></a></div>
-				</div>
-			 </div>
-		</article>
-	</section>
 
 	<section id="scripler" class="clearfix">
 		<article>
