--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
 					Make great ebooks
 				</h2>
 				<div class="create_subtext">
-					With Scripler, making ebooks is going to be easy.<br />Set up an account and turn your text into a good looking<br />and fully functional ebook, ready for distribution.<br />Oh, and it will be free.<br /><br />Sign up for our newsletter now and be the first to know when Scripler is ready.
+					Scripler is an intuitive way to write and produce ebooks.<br />
+					Your books will be beautiful, fully functional and ready for distribution.<br />
+					Oh, and it’s free.
 				</div>
 
 				<!-- MailChimp -->
@@ -326,7 +328,7 @@
 		<article>
 			<div class="inner">
 				<h1>About</h1>
-				<h2>Scriplers</h2>
+				<h2>Scripler team</h2>
 
 				<div class="half">
 					<span>
