--- a/public/index.html
+++ b/public/index.html
@@ -328,15 +328,18 @@
 		<article>
 			<div class="inner">
 				<h1>About</h1>
-				<h2>Scripler team</h2>
+				<div class="about-text">
+					Scripler will make the ebook revolution accessible to anyone who has something to say.
+				</div>
 
+				<h2>Da $cripler team</h2>
 				<div class="half">
 					<span>
 						<a href="mailto:david@scripler.com" class="email-text">David Walther Birk</a>, Project Lead<br />
 						Is actually an archaeologist!
 					</span>
 
-					<span>
+					<span class="reduced-padding">
 						<a href="mailto:morten@scripler.com" class="email-text">Morten Garbøl Franck</a>, Backend developer<br />
 						Is addicted to:<br />
 						<ul><li>Lists</li></ul>
