--- a/public/index.html
+++ b/public/index.html
@@ -332,7 +332,7 @@
 					Scripler will make the ebook revolution accessible to anyone who has something to say.
 				</div>
 
-				<h2>Da $cripler team</h2>
+				<h2>The Scripler Team</h2>
 				<div class="half">
 					<span>
 						<a href="mailto:david@scripler.com" class="email-text">David Walther Birk</a>, Project Lead<br />
@@ -347,7 +347,7 @@
 
 					<span>
 						<a href="mailto:sofie@scripler.com" class="email-text">Sofie Marie Ottsen</a>, Communications<br />
-						Plays the saxophone (really poorly)
+						Plays the saxophone (really poorly).
 					</span>
 
 					<span>
@@ -357,13 +357,13 @@
 				</div>
 				<div class="half">
 					<span>
-						<a href="mailto:kaspar@scripler.com" class="email-text">Kaspar Sivertsen, Graphic designer</a><br />
-						Has no special characteristics what so ever
+						<a href="mailto:kaspar@scripler.com" class="email-text">Kaspar Sivertsen</a>, Graphic designer<br />
+						Has no special characteristics whatsoever.
 					</span>
 
 					<span>
 						<a href="mailto:allan@scripler.com" class="email-text">Allan Mørk Christensen</a>, Backend developer<br />
-						Solves the Rubik’s Cube (very slowly)
+						Solves the Rubik’s Cube (very slowly).
 					</span>
 
 					<span>
